--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularBootstrapTemplate</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>FoodScannerApp</title>
+    <base href="/">
+    <meta name="viewport"
+          content="width=100%; initial-scale=1; maximum-scale=1; minimum-scale=1; user-scalable=no">
+    <link rel="icon"
+          type="image/x-icon"
+          href="favicon.ico">
+  </head>
+  <body class="mb-5">
+    <app-root></app-root>
+    <script src="cordova.js"></script>
+  </body>
 </html>
